Refacts of the driver